sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:9: error: not found: value k
      if (!isSmaller(k,k+1)){
                     ^AlgCocktailSort2:9: error: not found: value k
      if (!isSmaller(k,k+1)){
                       ^AlgCocktailSort2:10: error: not found: value k
        swap(k+1,k)
             ^AlgCocktailSort2:10: error: not found: value k
        swap(k+1,k)
                 ^AlgCocktailSort2:16: error: not found: value k
      if (!isSmaller(k,k+1)){
                     ^AlgCocktailSort2:16: error: not found: value k
      if (!isSmaller(k,k+1)){
                       ^AlgCocktailSort2:17: error: not found: value k
        swap(k+1,k)
             ^AlgCocktailSort2:17: error: not found: value k
        swap(k+1,k)
                 ^