sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  var debut=0
  var fin=getValueCount()
  var echange=1
  while(echange!=0){
    echange=0
    for (i<- debut to fin){
      if (!isSmaller(k,k+1)){
        swap(k+1,k)
        echange=echange+1
      }
    }
    fin=fin-1
    for (i<- fin to debut){
      if (!isSmaller(k,k+1)){
        swap(k+1,k)
        echange=echange+1
      }
    }
    debut=debut+1
  }
}
